vlib/v/parser/tests/fn_call_args_without_comma_1_err.out
vlib/v/parser/tests/fn_call_args_without_comma_1_err.vv:6:11: error: unexpected number `23`, expecting `,`
    4 | 
    5 | fn main() {
    6 |     greet(17 23)
      |              ~~
    7 | }
