vlib/v/parser/tests/fn_call_args_without_comma_1_err.vv
fn greet(i1 int, i2 int) {
	println('${i1} ${i2}')
}

fn main() {
	greet(17 23)
}
